tuning in front page, added page padding to context panel include to prevent glow overflow from filter lists

--- a/app/sass/context_panel.sass
+++ b/app/sass/context_panel.sass
@@ -127,6 +127,7 @@
 
 
   .relation, .changeRelation, .context
+    +user-select
     .icon
       +right
       +relative
@@ -520,6 +521,11 @@
       .tag
 
 
+.pagePadding
+  +absolute
+  top: 684px
+  height: 1px
+  width: 1px
 
 
 
