--- a/app/sass/new_entry.sass
+++ b/app/sass/new_entry.sass
@@ -328,12 +328,12 @@
     border: 1px solid #333
     +hidden
     .dropboxBrowse
-      +relative
+      +absolute
       +overflow
       +center
       +pointer
       width: 100px
-      left: 60px
+      left: 170px
       +round(8)
       direction: ltr
       height: 34px
