--- a/app/sass/settings_panel.sass
+++ b/app/sass/settings_panel.sass
@@ -186,6 +186,8 @@
       width: 306px
     .country
       width: 316px
+      option, optgroup
+        width: 300px
     .save, .cancel
       +round(4)
       padding: 0
